--- a/News
+++ b/News
@@ -1,5 +1,6 @@
-- Release! // 1.0
-    - Added everyone versions.
-    - Added UI.
-    - Added selection of user nickname.
-    - Added version check.
+- Release! // 1.0                         |     /\
+    - Added everyone versions.            |    /  \
+    - Added UI.                           |   /    \
+    - Added selection of user nickname.   |   \    /
+    - Added version check.                |    \  /
+                                          |     \/
