--- a/News
+++ b/News
@@ -1,4 +1,4 @@
-- Release! // 1.0                         |       /\
+- RELEASE! // 1.0                         |       /\
     - Added everyone versions.            |      /  \
     - Added UI.                           |     /    \
     - Added selection of user nickname.   |     \    /
