--- a/News
+++ b/News
@@ -1,6 +1,5 @@
-- RELEASE! // 1.0                         |       /\
-    - Added everyone versions.            |      /  \
-    - Added UI.                           |     /    \
-    - Added selection of user nickname.   |     \    /
-    - Added version check.                |      \  /
-                                          |       \/
+- RELEASE! // 1.0
+    - Added everyone versions.
+    - Added UI.
+    - Added selection of user nickname.
+    - Added version check.
