--- a/News
+++ b/News
@@ -1,4 +1,4 @@
-- RELEASE! // 1.0
+- RELEASE! // 1.0 // LATEST
     - Added everyone versions.
     - Added UI.
     - Added selection of user nickname.
