--- a/News
+++ b/News
@@ -1,5 +1,5 @@
-- RELEASE! // 1.0 // LATEST
-    - Added everyone versions.
-    - Added UI.
-    - Added selection of user nickname.
-    - Added version check.
+- РЕЛИЗ! // 1.0
+    - Добавлены все версии.
+    - Добавлена графисечкая часть.
+    - Добавлены пользовательские никнеймы.
+    - Добавлена проверка версий.
