--- a/News
+++ b/News
@@ -2,4 +2,4 @@
     - Добавлены все версии.
     - Добавлена графисечкая часть.
     - Добавлены пользовательские никнеймы.
-    - Добавлена проверка версий.
+    - Добавлена проверка версий лаунчера.
