--- a/News
+++ b/News
@@ -1,5 +1,7 @@
 - РЕЛИЗ! // 1.0
     - Добавлены все версии.
-    - Добавлена графисечкая часть.
+    - Добавлена графическая часть.
     - Добавлены пользовательские никнеймы.
     - Добавлена проверка версий лаунчера.
+    - Добавлена пользовательская настройка лаунчера.
+    - Добавлена проверка java.
